src/style.css
/* ... */
.todo-item .marker-container input:checked ~ .marker::after {
  display: block;
}

.todo-item .marker-container .marker::after {
  left: 7.7px;
  top: 3.2px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.todo-item [data-done="false"] {
}

.todo-item [data-done="true"] {
}

.todo-item .todo-details-overview {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 8px;
  padding-left: 8px;
  user-select: none;
  cursor: pointer;
}

.todo-item .todo-details-overview:hover {
  background-color: rgba(182, 175, 175, 0.567);
}

.todo-item .todo-title {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.todo-item .date-subtask-view {
  font-size: 0.8em;
  display: flex;
  align-items: center;
  gap: 8px;
}

.todo-item > button {
  padding: 9px 12px;
  cursor: pointer;
  align-self: center;
  margin: 8px;
  background-position: center;
  background-repeat: no-repeat;
}

.todo-item .delete-todo {
  background-image: url(./icons/trash-can-outline.svg);
}

.todo-item .edit-todo {
  background-image: url(./icons/square-edit-outline.svg);
}

.todo-item .priority {
  width: 12px;
  background-color: red;
  border-top-right-radius: 9px;
  border-bottom-right-radius: 9px;
}

.todo-item .priority[data-priority="high"] {
}

.current-screen .add-task {
  position: absolute;
  bottom: 30px;
  right: 30px;
  height: 60px;
  width: 60px;
  border-radius: 50%;
  border: 2px solid #c38d9e;
  background-color: #c38d9e;
  color: white;
  padding: 8px;
  font-weight: bold;
}

.current-screen .add-task:hover {
  background-color: rgba(195, 141, 158, 0.567);
  border-color: rgba(195, 141, 158, 0.567);
}

.add-task:active path {
  fill: #c38d9e;
}

.current-screen .add-task:active {
  color: #c38d9e;
  background-color: white;
}

dialog {
  margin: auto;
  border: 2px inset;
}

dialog.list-delete-confirm,
dialog.todo-delete-confirm,
.confirm-changes-discard,
.discard-todo-create {
  width: 300px;
}

.list-delete-confirm .dialog-content,
.confirm-changes-discard .dialog-content,
.discard-todo-create .dialog-content,
.create-list-item-dialog form,
.todo-delete-confirm .dialog-content,
.rename-list-item-dialog form,
.todo-details .dialog-content {
  display: flex;
  gap: 12px;
  flex-flow: column nowrap;
  padding: 8px 12px;
  width: 100%;
}

.list-delete-confirm h1,
.create-list-item-dialog h1,
.todo-delete-confirm h1,
.rename-list-item-dialog h1,
.confirm-changes-discard h1,
.discard-todo-create h1 {
  border-bottom: 1.8px solid gray;
  font-size: 2.2rem;
  padding: 8px 0;
}

.list-delete-confirm p {
}

.list-delete-confirm .btn-group,
.create-list-item-dialog .btn-group,
.todo-delete-confirm .btn-group,
.rename-list-item-dialog .btn-group,
.todo-details .btn-group,
.confirm-changes-discard .btn-group,
.discard-todo-create .btn-group {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
}

.list-delete-confirm button,
.create-list-item-dialog button,
.todo-delete-confirm button,
.rename-list-item-dialog button,
.todo-details button,
.confirm-changes-discard button,
.discard-todo-create button,
.nav .open-nav {
  border: 1px solid gray;
  padding: 8px 12px;
}

.create-list-item-dialog,
.rename-list-item-dialog {
  width: 350px;
  height: 200px;
}

.create-list-item-dialog form,
.rename-list-item-dialog form {
  width: 100%;
  display: flex;
  height: 100%;
}

.create-list-item-dialog h1,
.rename-list-item-dialog h1 {
  font-size: 2.2rem;
  border-bottom: 1.2px solid gray;
}

.create-list-item-dialog input,
.rename-list-item-dialog input {
  margin: auto 0px;
  height: 35px;
  border: none;
  border-bottom: 2px solid;
  padding-left: 10px;
  outline: none;
  font-weight: bold;
  font-size: 1.9rem;
}

.create-todo-item {
}
.create-todo-item form,
.edit-todo-item form {
  padding: 8px 12px;
  display: flex;
  flex-direction: column;
  gap: 12px;
  width: 300px;
}

.create-todo-item .row,
.edit-todo-item .row {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.create-todo-item .row-title,
.edit-todo-item .row-title {
  font-size: 1.9rem;
}

.create-todo-item input {
}

.create-todo-item input[type="text"],
.edit-todo-item input[type="text"] {
  height: 30px;
  padding: 6px;
  font-size: 1.5rem;
}

.create-todo-item select,
.edit-todo-item select {
  height: 25px;
}

.create-todo-item textarea,
.edit-todo-item textarea {
  resize: none;
  padding: 6px;
  height: 100px;
}

.create-todo-item .btn-group,
.edit-todo-item .btn-group {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
}

.create-todo-item .btn-group button,
.edit-todo-item .btn-group button {
  padding: 8px 12px;
  border: 1px solid gray;
}

.todo-details .dialog-content {
  max-height: 450px;
  overflow-y: auto;
  width: 500px;
  padding: 12px 18px;
}

.todo-details .dialog-content p {
  display: flex;
}

.todo-details .value {
}

.todo-details .heading {
  font-weight: bold;
  text-transform: uppercase;
  flex-basis: 95px;
  flex-shrink: 0;
}

.hidden {
  display: none;
}

.separator {
  display: inline-block;
  width: 6px;
  height: 6px;
  border-radius: 50%;
  background-color: black;
}

header .open-close-nav {
  display: none;
}
/* ... */

